fixed alignment for search, login, dasgboard and welcome text on multiple devices. Boxes.scss and navigation.scss

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -1034,7 +1034,7 @@ h2.carousel-overlay:before {
 
     .hero_image_title, .hero_image_subtitle, .hero_image_body {
         display: inline-block;         
-        padding-left: 2.7rem;
+        padding-left: 2rem;
         padding-right: 15px;   
         padding-bottom: 1px; 
         /*text-shadow: 2px 2px 10px rgba(0,0,0,.9); */
@@ -1042,8 +1042,11 @@ h2.carousel-overlay:before {
 
         @include media-breakpoint-down(tablet) { 
             margin-left: 0;
-            padding-left: 15px;
-        }        
+            padding-left: 25px;
+        }    
+        @include media-breakpoint-down(phone) { 
+            padding-left: 10px;
+        }      
     }
     .hero_image_title {    
         font-size: 2rem;
@@ -1052,6 +1055,14 @@ h2.carousel-overlay:before {
         padding-top: 15px;
         padding-bottom: 20px;
         /* margin-left: 11px!important; */
+        
+        @include media-breakpoint-up(midlarge_desktop) {
+            padding-left: calc(((100% - 1440px)/ 2) - 10px);
+        }
+
+        @include media-breakpoint-up(xl_desktop) {
+            padding-left: calc(((100% - 1440px)/ 2) + 5px);
+        }
 
         @include media-breakpoint-down(tablet) {
             font-size: 1.3rem;
