--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -354,13 +354,20 @@ button.header_search {
 		opacity:0;
 	}
 
-	@include media-breakpoint-up(midlarge_desktop) {
-		right: calc(((100% - 1440px)/ 2) + 155px);
+	@include media-breakpoint-down(phone) {
+		right: 155px;
+	}
+	@include media-breakpoint-only(tablet) {
+		right: 160px;
 	}
 
-	@include media-breakpoint-up(xl_desktop) {
+	@include media-breakpoint-up(midlarge_desktop) {
+		right: calc(((100% - 1440px)/ 2) + 150px);
+	}
+
+	/*@include media-breakpoint-up(xl_desktop) {
         margin-right: calc(((100% - 1500px) / 2) + 25px);
-    }
+    }*/
 }
 div.search-icon-main {    	
 	width: 20px;
@@ -403,15 +410,19 @@ div.search-icon-rollover {
     margin:30px 0 0 0;
 
     @include media-breakpoint-only(tablet) {
-    	right: 140px;
+    	right: 150px;
     	top: -29px;
     }
     @include media-breakpoint-down(phone) {
     	right: 145px;
     	top: -29px;
     }
+    @include media-breakpoint-up(midlarge_desktop) {
+    	/*right: 233px;*/
+    	margin-right: calc(((100% - 1440px)/ 2) - 15px); 
+    }
      @include media-breakpoint-up(xl_desktop) {
-        margin-right: calc(((100% - 1500px) / 2) + 25px);   
+        margin-right: calc(((100% - 1500px)/ 2) + 15px);   
     }
     
     input[type="search"] {
@@ -568,7 +579,7 @@ a.dashboard-button{
 	@include media-breakpoint-only(tablet) {
 		position: absolute;
     	top: 45px;
-    	right: 50px;
+    	right: 60px;
 
 	 	&:hover,
 		&:focus {
@@ -585,8 +596,9 @@ a.dashboard-button{
 			margin-top: -70px!important;
 		}
 	}
+
 	@include media-breakpoint-up(midlarge_desktop) {
-		right: calc(((100% - 1440px)/ 2) + 30px);
+		right: calc(((100% - 1440px)/ 2) + 15px);
 	}
 
 	@include media-breakpoint-up(xl_desktop) {
